<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/list_fragment">

    <fragment
        android:id="@+id/list_fragment"
        android:name="com.assignment.githubapp.view.UserListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_user_list">
        <action
            android:id="@+id/action_list_to_details_view"
            app:destination="@id/details_fragment"/>
    </fragment>

    <fragment
        android:id="@+id/details_fragment"
        android:name="com.assignment.githubapp.view.UserDetailsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_user_details">
        <argument
            android:name="user"
            app:argType="string"/>
    </fragment>

</navigation>